strip landing page down to bare essentials

--- a/config/locales/blacklight.en.yml
+++ b/config/locales/blacklight.en.yml
@@ -1,3 +1,7 @@
 en:
   blacklight:
     application_name: 'Blacklight'
+    welcome: 'Welcome to Blacklight'
+    search:
+      facets:
+        title: Search limits
