--- a/config/locales/blacklight.en.yml
+++ b/config/locales/blacklight.en.yml
@@ -2,6 +2,7 @@ en:
   blacklight:
     application_name: 'Blacklight'
     welcome: 'Welcome to Blacklight'
+    back_to_search: Back to Search Results
     search:
       facets:
         title: Search limits
